add discovery service with Eureka server configuration and update inventory service to handle multiple SKU checks